--- a/style.css
+++ b/style.css
@@ -898,6 +898,8 @@ article > content .comments .comments-inner {
   padding: 2em 0; }
 
 .archive-teasers {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
