--- a/css/_recent-posts-widget.scss
+++ b/css/_recent-posts-widget.scss
@@ -14,6 +14,10 @@
 	color: $voablue;
 	padding: .5rem;
 	text-decoration: none;
+
+	-moz-transition: all 1s;
+	-webkit-transition: all 1s;
+	transition: all 1s;
 }
 
 .widget-card > a:hover {
@@ -22,7 +26,20 @@
 }
 
 .widget-card-img {
+	overflow: hidden;
 	width: 35%;
+}
+
+.widget-card > a img {
+	-moz-transition: all 1s;
+	-webkit-transition: all 1s;
+	transition: all 1s;
+}
+
+.widget-card > a:hover img {
+	-moz-transform: scale(1.25);
+  	-webkit-transform: scale(1.25);
+  	transform: scale(1.25);
 }
 
 .widget-card-text {
