--- a/style.css
+++ b/style.css
@@ -331,9 +331,6 @@ continue span {
 /* ======================================================================== */
 /* single article */
 /* ======================================================================== */
-body.single {
-  background-color: #eee; }
-
 .single .rows_1,
 .page .rows_1,
 .archive .rows_1 {
@@ -349,7 +346,13 @@ body.single {
   width: 100%; }
 
 article > content {
+  border-color: #ddd;
+  border-style: solid;
+  border-width: 1px 1px 0 1px;
   width: 65.666666%; }
+
+.single article > content {
+  border: none; }
 
 article > content .content-part {
   background-color: #fcfcfc;
@@ -1115,11 +1118,12 @@ h1.site-title {
   justify-content: flex-end; }
 
 .site-nav > * {
-  margin-left: 1rem; }
+  margin-left: 1.5rem; }
 
 .search-form-container {
   background-color: #ddd;
   border-bottom: 1px solid #ccc;
+  display: none;
   padding: 1rem; }
 
 .search-form {
@@ -1284,14 +1288,28 @@ h1.site-title {
   border: 1px solid #ddd;
   color: #1330bf;
   padding: .5rem;
-  text-decoration: none; }
+  text-decoration: none;
+  -moz-transition: all 1s;
+  -webkit-transition: all 1s;
+  transition: all 1s; }
 
 .widget-card > a:hover {
   background-color: #ddd;
   border: 1px solid #fcfcfc; }
 
 .widget-card-img {
+  overflow: hidden;
   width: 35%; }
+
+.widget-card > a img {
+  -moz-transition: all 1s;
+  -webkit-transition: all 1s;
+  transition: all 1s; }
+
+.widget-card > a:hover img {
+  -moz-transform: scale(1.25);
+  -webkit-transform: scale(1.25);
+  transform: scale(1.25); }
 
 .widget-card-text {
   justify-content: space-between;
